syntax = "proto3";

package fileupload;

service FileUpload {
  rpc UploadVideo (stream VideoUploadRequest) returns (Response);
  rpc UploadImage (stream ImageUploadRequest) returns (Response);
}

message VideoUploadRequest {
  string fileName = 1;
  bytes chunk = 2;
}

message ImageUploadRequest {
  string fileName = 1;
  string type = 2;
  bytes chunk = 3;
}

message Response {
  string message = 1;
  string absoluteFilePath = 2;
}
